fixed spacing issue when there are no columns

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ button:disabled {
   border: none;
   border-radius: 3px;
   padding: 4px 8px;
+  margin-left: 10px;
 }
 
 .add-column-btn:hover {
